// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Candytar renders with color amber 1`] = `
<svg
  className="ax-candytar ax-candytar--amber"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color blue 1`] = `
<svg
  className="ax-candytar ax-candytar--blue"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color brown 1`] = `
<svg
  className="ax-candytar ax-candytar--brown"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color chartreuse 1`] = `
<svg
  className="ax-candytar ax-candytar--chartreuse"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color green 1`] = `
<svg
  className="ax-candytar ax-candytar--green"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color grey 1`] = `
<svg
  className="ax-candytar ax-candytar--grey"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color lilac 1`] = `
<svg
  className="ax-candytar ax-candytar--lilac"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color orange 1`] = `
<svg
  className="ax-candytar ax-candytar--orange"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color pink 1`] = `
<svg
  className="ax-candytar ax-candytar--pink"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color purple 1`] = `
<svg
  className="ax-candytar ax-candytar--purple"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color rose 1`] = `
<svg
  className="ax-candytar ax-candytar--rose"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color teal 1`] = `
<svg
  className="ax-candytar ax-candytar--teal"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with custom size 1`] = `
<svg
  className="ax-candytar ax-candytar--rose"
  style={
    Object {
      "height": "4rem",
      "width": "4rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16 20c-4 0-7-3-7-7s3-7 7-7 7 3 7 7-3 7-7 7zM6 28.5c1.7-3.8 5.6-6.5 10-6.5 4.5 0 8.3 2.7 10 6.5C23.4 30.7 20 32 16 32s-7.3-1.3-10-3.5z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;
